--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,23 +1,23 @@
 --- 
 
-dkm_mailcatcher::ensure_state: 'installed'
-dkm_mailcatcher::http_addr: "%{ facts.ipaddress }"
-#dkm_mailcatcher::smtp_addr: "%{ facts.ipaddress }"
-dkm_mailcatcher::package: 'mailcatcher'
-dkm_mailcatcher::package_provider: 'gem'
-dkm_mailcatcher::command: "mailcatcher --ip %{lookup('dkm_mailcatcher::http_addr')}"
-dkm_mailcatcher::terminal_provider: shell
-dkm_mailcatcher::rvm_user: 'dkm'
-dkm_mailcatcher::ruby_version: 'ruby:2.7'
-dkm_mailcatcher::module_mngmt: dnfmodule
-dkm_mailcatcher::packages:
+mailcatcher::ensure_state: 'installed'
+mailcatcher::http_addr: "%{ facts.ipaddress }"
+# mailcatcher::smtp_addr: "%{ facts.ipaddress }"
+mailcatcher::package: 'mailcatcher'
+mailcatcher::package_provider: 'gem'
+mailcatcher::command: "mailcatcher --ip %{lookup('mailcatcher::http_addr')}"
+mailcatcher::terminal_provider: shell
+mailcatcher::rvm_user: 'dkm'
+mailcatcher::ruby_version: 'ruby:2.7'
+mailcatcher::module_mngmt: dnfmodule
+mailcatcher::packages:
     - ruby-devel
     - sqlite-devel
-dkm_mailcatcher::target_path: '/etc/systemd/system/mailcatcher.service'
-dkm_mailcatcher::service_desc: 'MailCatcher Service'
-dkm_mailcatcher::service_doc: 'http://mailcatcher.me/'
-dkm_mailcatcher::service_start: 'network.service'
-dkm_mailcatcher::service_type: 'simple'
-dkm_mailcatcher::service_cmd: '/usr/local/bin/mailcatcher --foreground --ip 0.0.0.0'
-dkm_mailcatcher::service_restart: 'always'
-dkm_mailcatcher::service_wanted: 'multi-user.target'
+mailcatcher::target_path: '/etc/systemd/system/mailcatcher.service'
+mailcatcher::service_desc: 'MailCatcher Service'
+mailcatcher::service_doc: 'http://mailcatcher.me/'
+mailcatcher::service_start: 'network.service'
+mailcatcher::service_type: 'simple'
+mailcatcher::service_cmd: '/usr/local/bin/mailcatcher --foreground --ip 0.0.0.0'
+mailcatcher::service_restart: 'always'
+mailcatcher::service_wanted: 'multi-user.target'
