--- a/data/common.yaml
+++ b/data/common.yaml
@@ -2,7 +2,7 @@
 
 mailcatcher::ensure_state: 'installed'
 mailcatcher::http_addr: "%{ facts.ipaddress }"
-# mailcatcher::smtp_addr: "%{ facts.ipaddress }"
+mailcatcher::smtp_addr: "%{ facts.ipaddress }"
 mailcatcher::package: 'mailcatcher'
 mailcatcher::package_provider: 'gem'
 mailcatcher::command: "mailcatcher --ip %{lookup('mailcatcher::http_addr')}"
@@ -19,5 +19,9 @@ mailcatcher::service_doc: 'http://mailcatcher.me/'
 mailcatcher::service_start: 'network.service'
 mailcatcher::service_type: 'simple'
 mailcatcher::service_cmd: '/usr/local/bin/mailcatcher --foreground --ip 0.0.0.0'
-mailcatcher::service_restart: 'always'
+mailcatcher::service_restart: 'on-failure'
+mailcatcher::service_restart_time: '5s'
 mailcatcher::service_wanted: 'multi-user.target'
+mailcatcher::service_name: 'mailcatcher'
+mailcatcher::service_status: 'running'
+mailcatcher::service_state: true
