change again ExecStart variable

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -20,7 +20,7 @@ mailcatcher::service_desc: 'MailCatcher Service'
 mailcatcher::service_doc: 'http://mailcatcher.me/'
 mailcatcher::service_start: 'network.service'
 mailcatcher::service_type: 'simple'
-mailcatcher::service_cmd: '/usr/local/bin/mailcatcher --foreground'
+mailcatcher::service_cmd: '/usr/local/bin/mailcatcher --ip 0.0.0.0'
 mailcatcher::service_restart: 'on-failure'
 mailcatcher::service_restart_time: '5s'
 mailcatcher::service_wanted: 'multi-user.target'
